--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <div class="flex items-center">
                                     <div class="w-10 h-10 rounded-full bg-gray-200 mr-3"></div>
                                     <div>
-                                        <p class="font-medium">Dr. Amina Belhaj</p>
+                                        <p class="font-medium">S M I</p>
                                         <p class="text-sm text-gray-500">May 15, 2025</p>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
                                 <div class="flex items-center">
                                     <div class="w-10 h-10 rounded-full bg-gray-200 mr-3"></div>
                                     <div>
-                                        <p class="font-medium">Karim El Fassi</p>
+                                        <p class="font-medium">S M I</p>
                                         <p class="text-sm text-gray-500">April 22, 2025</p>
                                     </div>
                                 </div>
@@ -210,7 +210,7 @@
                                 <div class="flex items-center">
                                     <div class="w-10 h-10 rounded-full bg-gray-200 mr-3"></div>
                                     <div>
-                                        <p class="font-medium">Leila Zayani</p>
+                                        <p class="font-medium">S M I</p>
                                         <p class="text-sm text-gray-500">June 3, 2025</p>
                                     </div>
                                 </div>
